--- a/comet/static/app/package.json
+++ b/comet/static/app/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-cssbeautify": "^0.1.3",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.0",
